--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+spring.datasource.url=jdbc:h2:mem:products
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+# 'hibernate' dialect to generate sql for a specific database
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# database web console switch (http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
 
+# to run sql only after table creation via @Entity:
+spring.jpa.defer-datasource-initialization=true
+# # # Common JPA settings: # # #
+# spring.jpa.hibernate.ddl-auto=update
+### create - create tables from entity - drops existing and create from scratch
+### update - update created earlier db with new tables and new columns - never deletes tables/columns
+### validate - check tables using entity - throws exception
+### none - don't generate any tables from entity
+
+# spring.sql.init.mode=always
+### should spring use sql to initialize database
+### always - use sql scripts
+### embedded - use sql only if database is embedded (h2, sqlite etc.)
+### never - don't use sql scripts to initialize database
+
+# sql load order
+## 1 schema.sql - create tables
+## 2 import.sql - import data
+## 3 data.sql - import data
+
+### debug hibernate sql
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
